# 1x-fit

./: .env.example  .gitignore  BOT_COMMANDS.md  README.md  mypy.ini  pyproject.toml
.github/workflows/: build_push.yml  build_push_bot.yml  build_push_etl.yml  build_push_postgres.yml  deploy.yml  deploy_manual.yml  manual_deploy.yml  postgres_build_push.yml
bot/: .dockerignore  Dockerfile  __init__.py  config.py  main.py  requirements.txt  settings.py
bot/database/: models.py
bot/etl_service/: config.py  ddl.py  etl_processor.py  init_tables.py  main.py  models.py  scheduler.py
bot/handlers/: __init__.py  daily_polls.py  notifications.py  progress.py  registration.py  testing.py
bot/utils/: calculations.py  messages.py  visualization.py
docker/postgres/: Dockerfile  postgresql.conf
docker/postgres/init_scripts/: 01_create_test_db.sh
docs/: architecture.md  cicd_workflow.md  database_structure.md  deployment_guide.md  docker_caching.md  implementation_plan.md  notification_system.md  progress_formula.md  test_docker_cache.md  visualization.md
etl_service/: Dockerfile  calculations.py  config.py  ddl.py  etl_processor.py  init_tables.py  main.py  models.py  requirements.txt  scheduler.py
etl_service/etl/: __init__.py  base.py  registry.py
etl_service/etl/extract/: __init__.py  base.py
etl_service/etl/extract/sqlite/: __init__.py  users.py  weight.py
etl_service/etl/load/: __init__.py  base.py
etl_service/etl/load/postgres/: __init__.py  users.py
etl_service/etl/transform/: __init__.py  base.py  calculations.py  users.py
etl_service/pipelines/: __init__.py  user_progress.py
tests/: test_bot_functionality.py
