[project]
name = "1x-fit"
version = "0.1.0"
description = "Telegram bot for fitness and weight loss competition with fair progress tracking"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.13.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
    "pytz>=2023.3",
    "pydantic-settings>=2.0.0",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "mypy>=1.0.0",
    "ruff>=0.14.11",
]
[tool.ruff]
exclude = [
    ".venv",
    "tests",
]
fix = true
unsafe-fixes = false
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    "D1", "D203", "D213", "FA102", "ANN101", "RUF001", "RUF002", "RUF003", "FIX002", "A003", "E712", "PGH003", "ARG002",
    "ANN102", "S101", "TD002", "TD003", "TD004", "S501", "ANN401", "ARG001", "RUF012", "N815",
    "E501", "E402",
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
known-local-folder = []

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["ANN401", "S101", "S311"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-decorators = ["attrs.define"]

[tool.pytest.ini_options]
minversion = "8.4"
addopts = "-vs -q -s"
log_cli_level = "DEBUG"
log_file = "tests/tests.log"
